--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
+# directories
 target/
+.idea/
+
+# specific files
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -6,3 +10,6 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
+
+# file patterns
+*.iml
