--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
+# Ctags tags file
+tags
 
 # file patterns
 *.iml
+# Vim swap files
+*.swp
